[package]
name = "axum12300"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8.4"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
regex = "1.11.2"
